--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -1,6 +1,7 @@
 .advantages {
     height: 589px;
     background-color: #f3f3f3;
+    position: relative;
     &__wrapper {
         margin-left: 9px;
         padding-top: 112px;
