--- a/src/sass/blocks/_managers.scss
+++ b/src/sass/blocks/_managers.scss
@@ -1,4 +1,5 @@
 .managers {
+    position: relative;
     margin-top: -2px;
     height: 342px;
     background: url('../img/background3.png') center/cover no-repeat;
