--- a/src/sass/blocks/_chinaagent.scss
+++ b/src/sass/blocks/_chinaagent.scss
@@ -1,4 +1,5 @@
 .chinaagent {
+    position: relative;
     margin-top: 5px;
     height: 342px;
     background: url('../img/background2.png') center/cover no-repeat;
