--- a/src/sass/blocks/_firstscreen.scss
+++ b/src/sass/blocks/_firstscreen.scss
@@ -14,16 +14,23 @@
             
             width: 630px;
             height: 100px;
-            display: flex;
+            display: grid;
             justify-content: space-around;
             align-items: center;
             padding-bottom: 13px;
+            grid-template-columns: repeat(6, auto);
+            grid-template-rows: 1fr;
         }
         &__link {
             color: white;
             font-size: 15px;
+            padding-right: 13px;
             &:hover {
                 color: $main-color;
+            }
+            border-right:  dotted 1px #858891;
+            &:last-child {
+                border-right:  none;
             }
         }
         &_three {
@@ -152,7 +159,7 @@
                 left: 50%;
                 transform: translateX(-50%);
             }
-            &_shit {
+            &_package {
                 top: 6px;
                 padding-right: 20px;
             }
@@ -175,10 +182,8 @@
         font-weight: 600;
         font-size: 15px;
         position: absolute;
-        left: 50%;
-        transform: translateX(-50%);
         margin-top: 42px;
-        margin-left: 1px;
+        margin-left: 456px;
         padding-top: 1px;
         width: 230px;
         height: 57px;
