--- a/src/sass/blocks/_questions.scss
+++ b/src/sass/blocks/_questions.scss
@@ -1,4 +1,5 @@
 .questions {
+    position: relative;
     margin-top: -24px;
     height: 438px;
     background: url('../../img/background4.png') center/cover no-repeat;
