--- a/src/sass/blocks/_reviews.scss
+++ b/src/sass/blocks/_reviews.scss
@@ -1,11 +1,13 @@
 .reviews {
+    position: relative;
     transition: all 2s;
     height: 500px;
     margin: 0 auto;
     margin-top: -6px;
-    background-color: #fff;
+    // background-color: #fff;
     width: 1420px;
     &__header {
+        margin-top: -0px;
         height: 170px;
         h3 {
             margin-left: 2px;
