--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -15,6 +15,9 @@
 .map iframe {
     width: 100%;
 }
+body {
+    min-width: 1900px;
+}
 
 @import 'blocks/buttons';
 @import 'blocks/heading';
@@ -29,3 +32,4 @@
 @import 'blocks/reviews';
 @import 'blocks/questions';
 @import 'blocks/footer';
+@import 'blocks/media';
